# slint-ui-testing

./: Cargo.toml  index.html
src/: main.rs
