[package]
name = "slint-ui-testing"
version = "0.0.1"
edition = "2021"

[dependencies]
slint = "0.2.*"
#servo-fontconfig-sys = "0.5.1"
rusqlite = { version = "0.28.*", features = ["bundled", "wasm32-wasi-vfs"] }

[target.'cfg(target_arch = "wasm32-wasi")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2", features = ["js"] }

[patch]
#[dependencies.servo-fontconfig-sys]
#git = "https://github.com/servo/libfontconfig/"
#version = "5.1.0"
#features = ["force_system_lib"]

#[dependencies.expat-sys]
#git = "https://github.com/servo/libexpat/"
#version = "2.2.7"

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]
